# Poly_Rooting

./: CMakeLists.txt  README.md  derivative.c  derivative.h  freePoly.h  horner.c  horner.h  longDiv.c  longDiv.h  main.c  multiHorner.c  multiHorner.h  multiNewton.c  multiNewton.h  multi_horner.c  multi_horner.h  multi_newton.c  multi_newton.h  newton.c  newton.h  polynomial.c  polynomial.h  reading.c  reading.h  vecHorner.c  vecHorner.h  vec_derivative.c  vec_derivative.h  vec_horner.c  vec_horner.h  vec_main.c  vec_newton.c  vec_newton.h
include/: polynomial.h
include/ara/: reading.h
include/ara/vector/: derivative.h  horner.h
include/multi/: horner.h  newton.h
include/scalar/: derivative.h
include/vector/: derivative.h  horner.h  newton.h
scr/: longDiv.c
scr/ara/: longDiv.c
scr/ara/scalar/: derivative.c  main.c  newton.c
scr/ara/vector/: derivative.c  horner.c  main.c  newton.c
scr/multi/: main.c  newton.c
scr/scalar/: main.c  newton.c
scr/vector/: derivative.c  horner.c  main.c  newton.c
src/: freePoly.c  longDiv.c
src/multi/: derivative.c  horner.c  main.c  newton.c
src/scalar/: horner.c  newton.c
src/vector/: derivative.c  horner.c  main.c  newton.c
test/: .gitignore  package-lock.json  run  run.mjs
test/data/: Polynomials.txt  complex.txt  linear.txt  polynomials.txt  quadratic.txt
test/src/: buildPoly.m  testCaseGenerator.m
